# VIPP25f_potholesim

./: FOR_DEEPSEEK.md  LAUNCH_COMMAND.txt  MARKER_VISUALIZATION_WORKING.txt  README.md  README_VISUALIZATION.md  RUN_METRICS_READER.sh  SETUP_COMPLETE.md  SETUP_SUMMARY.md  VERIFICATION_CHECKLIST.txt  VISUALIZATION_GUIDE.sh  VISUALIZATION_READY.txt  launch_full_visualization.sh  run_pothole_visualization.sh  run_rviz_clean.sh  test_metrics_reader.py
src/pothole_interfaces/: CMakeLists.txt  package.xml
src/pothole_interfaces/msg/: DecisionArray.msg  Pothole.msg  PotholeArray.msg  PotholeDecision.msg
src/pothole_sim/: package.xml  setup.cfg  setup.py
src/pothole_sim/config/: pothole_rviz_config.rviz
src/pothole_sim/launch/: full_visualization.launch.py  gazebo_bridge.launch.py  pothole_world.launch.py  working_system.launch.py
src/pothole_sim/models/pothole_patch/: model.config  model.sdf
src/pothole_sim/models/simple_vehicle/: model.config  model.sdf
src/pothole_sim/pothole_sim/: gazebo_bridge.launch.py  marker_visualizer.py  pothole_decision_node.py  pothole_generator.py  pothole_metrics_reader.py  pothole_visualization_node.py  test_metrics_direct.py  vehicle_tf_publisher.py
src/pothole_sim/worlds/: pothole_world.sdf
