<?xml version="1.0"?>
<package format="3">
  <name>pothole_interfaces</name>
  <version>0.0.1</version>
  <description>Custom messages for pothole simulation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- CMake-based message package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl for generating interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- REQUIRED for rosidl msg packages -->
    <build_type>ament_cmake</build_type>
    
  </export>
</package>

